WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303490
[Site Isolation] WebPageProxy::setNetworkRequestsInProgress doesn't work
https://bugs.webkit.org/show_bug.cgi?id=303490
Summary
[Site Isolation] WebPageProxy::setNetworkRequestsInProgress doesn't work
Per Arne Vollan
Reported
2025-12-03 10:52:20 PST
WebPageProxy::setNetworkRequestsInProgress doesn't work when Site Isolation is enabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2025-12-03 10:52:21 PST
<
rdar://problem/159313542
>
Per Arne Vollan
Comment 2
2025-12-03 10:57:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54787
EWS
Comment 3
2025-12-04 08:04:28 PST
Committed
303914@main
(51d79e8813ba): <
https://commits.webkit.org/303914@main
> Reviewed commits have been landed. Closing PR #54787 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug