[Site Isolation] WebPageProxy::setNetworkRequestsInProgress doesn't work https://bugs.webkit.org/show_bug.cgi?id=303490 rdar://159313542

Reviewed by Ben Nham.

When Site Isolation is enabled, WebPageProxy is not aware of the network requests in the iframes.
We can resolve this by having the RemotePageProxy objects notify the WebPageProxy object when
there is an update on the network progress state for individual iframes.

* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::didReceiveMessage):
(WebKit::RemotePageProxy::setNetworkRequestsInProgress):
* Source/WebKit/UIProcess/RemotePageProxy.h:
(WebKit::RemotePageProxy::hasNetworkRequestsInProgress const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setNetworkRequestsInProgress):
(WebKit::WebPageProxy::networkRequestsInProgressDidChange):
* Source/WebKit/UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/303914@main