Source/WebKit/UIProcess/RemotePageProxy.h
@@ -110,11 +110,15 @@ public:
 
     void setCurrentOrientation(WebCore::ScreenOrientationType);
 
+    bool hasNetworkRequestsInProgress() const { return m_hasNetworkRequestsInProgress; }
+
 private:
     RemotePageProxy(WebPageProxy&, WebProcessProxy&, const WebCore::Site&, WebPageProxyMessageReceiverRegistration*, std::optional<WebCore::PageIdentifier>);
     void didReceiveMessage(IPC::Connection&, IPC::Decoder&) final;
     void didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, UniqueRef<IPC::Encoder>&) final;
     void isPlayingMediaDidChange(WebCore::MediaProducerMediaStateFlags);
+
+    void setNetworkRequestsInProgress(bool);
 
     const WebCore::PageIdentifier m_webPageID;
     const Ref<WebProcessProxy> m_process;
@@ -135,6 +139,7 @@ private:
     WebPageProxyMessageReceiverRegistration m_messageReceiverRegistration;
     WebCore::MediaProducerMediaStateFlags m_mediaState;
     RefPtr<RemotePageScreenOrientationManagerProxy> m_screenOrientationManager;
+    bool m_hasNetworkRequestsInProgress { false };
 };
 
 }
